# software_development_tools

./: README.md
Lab_2/: .gitignore  ISparseContainer.h  MathExpression.h  SparseList.h  generate_docs.sh
Main program/: .gitignore  CMakeLists.txt  ComputerAlgebraInterface.h  Doxyfile  ISparseContainer.h  MathExpression.h  MathFunction.h  Sequence.h  SparseList.h  SparseMatrix.h  docs.yml  generate_docs.sh  main.cpp
Tests(Lab_1)/: CMakeLists.txt  Unit_tests.cpp
